fix: move panel layout getting cut on small screens with large font
it also improves the aspect-ratio of the distances on vertical mode

--- a/styles/base.css
+++ b/styles/base.css
@@ -702,3 +702,10 @@ keyboard_box {
     background-color: @error;
 }
 
+.no-margin {
+    margin: 0;
+}
+
+.no-padding {
+    padding: 0;
+}
